added base grid and mock data for demo

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		<script src="node_modules/angular/angular.min.js"></script>
+    <script src="https://use.fontawesome.com/e1deba2144.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="dist/css/components/ngSmartGrid.css" >
 	</head>
 	<body data-ng-controller='mainController as mc' class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
 		<h1>ng-smart-grid</h1>
 		<hr/>
-    <!-- <ng-smart-grid/> -->
+    <smart-grid config="mc.baseGridConfig"></smart-grid>
+    <hr/>
+    <smart-grid config="mc.fancyGridConfig"></smart-grid>
+
 		<script src="dist/app.js"></script>
-		<script src="src/app.js"></s
-    <>cript>
+		<script src="src/app.js"></script>
 	</body>
 </html>
