--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-ng-app="app" lang="en" data-framework="angularjs">
 	<head>
 		<meta charset="utf-8">
-		<title>AngularJS • Smart Grid</title>
+		<title>AngularJS • Smart Grid With Locking machanism</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		<script src="node_modules/angular/angular.min.js"></script>
